--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -361,6 +361,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminBaseController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\DownlineController.cs" />
     <Compile Include="Controllers\WebApiController.cs" />
     <Compile Include="Controllers\UserBaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -390,6 +391,7 @@
     <Compile Include="Models\DBHelper.cs" />
     <Compile Include="Models\Home.cs" />
     <Compile Include="Models\Profile.cs" />
+    <Compile Include="Models\Reports.cs" />
     <Compile Include="Models\Tree.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\WebService\AgentServices.asmx.cs">
@@ -427,6 +429,8 @@
     <Content Include="Views\User\BinaryTree.cshtml" />
     <Content Include="Views\User\PinList.cshtml" />
     <Content Include="Views\User\Tree.cshtml" />
+    <Content Include="Views\Downline\DirectList.cshtml" />
+    <Content Include="Views\Downline\DownLineList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
