--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -473,6 +473,10 @@
     <Content Include="Views\Master\PackageMaster.cshtml" />
     <Content Include="Views\User\PinTransferReport.cshtml" />
     <Content Include="Views\User\ConfirmActivation.cshtml" />
+    <Content Include="Views\Admin\ChangePassword.cshtml" />
+    <Content Include="Views\Admin\PinTransferReportForAdmin.cshtml" />
+    <Content Include="Views\AdminReports\DirectListForAdmin.cshtml" />
+    <Content Include="Views\User\ChangePasswordForUser.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
