--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -477,6 +477,7 @@
     <Content Include="Views\Admin\PinTransferReportForAdmin.cshtml" />
     <Content Include="Views\AdminReports\DirectListForAdmin.cshtml" />
     <Content Include="Views\User\ChangePasswordForUser.cshtml" />
+    <Content Include="Views\Home\ForgetPassword.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
