--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -339,19 +339,33 @@
     <Content Include="MyTradeWebsite\assets\img\how-it-works-image\7.png" />
     <Content Include="MyTradeWebsite\assets\img\how-it-works-image\8.png" />
     <Content Include="MyTradeWebsite\assets\img\how-it-works-image\c1.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\008-apartment.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\24-hours.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\24-hours1.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\bill.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\broadband.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\card.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\commerci.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\dth.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\e-commerce-2.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\e-commerce.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\ecomm.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\elect.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\fastag.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\forex.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\gas.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\global.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\global1.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\insurance.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\landline.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\postpaid.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\prepaid.png" />
     <Content Include="MyTradeWebsite\assets\img\icon\real-estate.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\residen.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\residential.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\trade.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\transfer.png" />
+    <Content Include="MyTradeWebsite\assets\img\icon\water.png" />
     <Content Include="MyTradeWebsite\assets\img\invoicing-image\1.png" />
     <Content Include="MyTradeWebsite\assets\img\invoicing-image\2.png" />
     <Content Include="MyTradeWebsite\assets\img\invoicing-image\3.png" />
