--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -722,6 +722,10 @@
     <Content Include="Views\Wallet\ViewROI.cshtml" />
     <Content Include="Views\Wallet\WalletList.cshtml" />
     <Content Include="Views\User\TreeTTP.cshtml" />
+    <Content Include="Views\Admin\PayoutWalletLedgerForAdmin.cshtml" />
+    <Content Include="Views\Admin\ROIIncomeReportsForAdmin.cshtml" />
+    <Content Include="Views\Admin\ROIWalletForAdmin.cshtml" />
+    <Content Include="Views\Admin\ViewROIForAdmin.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
