--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -763,6 +763,8 @@
     <Content Include="Views\Home\emailtemplate.cshtml" />
     <Content Include="Views\Admin\LevelIncomeTr2ForAdmin.cshtml" />
     <Content Include="Views\Admin\PayoutDetailForAdmin.cshtml" />
+    <Content Include="Views\Admin\DistributePayment.cshtml" />
+    <Content Include="Views\Admin\DistributePaymentTPS.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
