--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -773,6 +773,7 @@
     <Content Include="Views\Master\Upload.cshtml" />
     <Content Include="Views\Master\UploadList.cshtml" />
     <Content Include="Views\User\Download.cshtml" />
+    <Content Include="Views\Admin\TransferWallet.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
