--- a/MyTrade/Web.config
+++ b/MyTrade/Web.config
@@ -10,6 +10,12 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="MERCHANT_KEY" value="IqgwdxnNCKkDHo"/> 
+    <add key="SALT" value="Add your salt key"/>
+    <add key="PAYU_BASE_URL" value="https://api.razorpay.com/v1"/>
+    <add key="action" value=""/>
+    <add key="hashSequence" value="key|txnid|amount|productinfo|firstname|email|udf1|udf2|udf3|udf4|udf5|udf6|udf7|udf8|udf9|udf10"/>
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
@@ -22,7 +28,7 @@
         <add namespace="System.Web.Mvc.Html"/>
         <add namespace="System.Web.Routing"/>
         <add namespace="System.Web.WebPages"/>
-      </namespaces>     
+      </namespaces>
     </pages>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
