--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -820,6 +820,7 @@
     <Content Include="Views\Report\PaidIncome.cshtml" />
     <Content Include="Views\Admin\TPSListForDistributePaymentNew.cshtml" />
     <Content Include="Views\Admin\PaidIncomeForAdmin.cshtml" />
+    <Content Include="Views\Home\CalculateDistributePaymentTPS.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
