--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -840,6 +840,7 @@
     <Content Include="Views\AdminReports\WalletLedger.cshtml" />
     <Content Include="Views\AdminReports\ActivateByPaymentList.cshtml" />
     <Content Include="Views\Admin\ViewLedger.cshtml" />
+    <Content Include="Views\Admin\UnUsedPinList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
