--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -841,6 +841,8 @@
     <Content Include="Views\AdminReports\ActivateByPaymentList.cshtml" />
     <Content Include="Views\Admin\ViewLedger.cshtml" />
     <Content Include="Views\Admin\UnUsedPinList.cshtml" />
+    <Content Include="Views\Admin\BannerImageUpload.cshtml" />
+    <Content Include="Views\Admin\SetMenuPermissionForUser.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -850,6 +852,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="BannerImage\" />
     <Folder Include="PanUpload\" />
     <Folder Include="ProfilePicture\" />
     <Folder Include="Views\API\" />
