--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -77,6 +77,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="RestSharp, Version=103.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.103.1\lib\net4\RestSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -639,6 +643,7 @@
     <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Controllers\MasterController.cs" />
     <Compile Include="Controllers\PermisssionsController.cs" />
+    <Compile Include="Controllers\RechargeController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\WalletController.cs" />
     <Compile Include="Controllers\WebApiController.cs" />
@@ -852,6 +857,9 @@
     <Content Include="Views\AdminReports\TreeTTPForAdmin.cshtml" />
     <Content Include="Views\AdminReports\TreeForAdmin.cshtml" />
     <Content Include="Views\Admin\ViewGenerateEpinDetails.cshtml" />
+    <Content Include="Views\Admin\ViewTPSForAdmin.cshtml" />
+    <Content Include="Views\Wallet\ViewTPS.cshtml" />
+    <Content Include="Views\Recharge\Recharge.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
