--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -868,6 +868,7 @@
     <Content Include="Views\Admin\PaymentModeList.cshtml" />
     <Content Include="Views\Admin\ViewTPSForAdmin.cshtml" />
     <Content Include="Views\Wallet\ViewTPS.cshtml" />
+    <Content Include="Views\Recharge\Recharge.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
