--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -615,6 +615,7 @@
     <Content Include="TreeIcon\men-block.png" />
     <Content Include="TreeIcon\men-block1.png" />
     <Content Include="TreeIcon\men-inactive.png" />
+    <Content Include="UploadFile\60cd7ff8-4b09-4b8e-b87a-470c88f6541f.png" />
     <Content Include="UploadReward\08b30345-a1f0-4810-ad7d-319145faecfa.JPG" />
     <Content Include="UploadReward\20951d5b-47bb-4d37-9128-9868763dfe78.jpg" />
     <Content Include="UploadReward\22df0343-8cc8-4281-9e78-005c16f9f8c3.jpg" />
