--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -880,6 +880,7 @@
     <Content Include="Views\User\UserReward.cshtml" />
     <Content Include="Views\AdminReports\ClaimRewardReport.cshtml" />
     <Content Include="Views\Home\AutoCalculateRewardBusiness.cshtml" />
+    <Content Include="Views\User\RoyaltyClub.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
