--- a/MyTrade/Web.config
+++ b/MyTrade/Web.config
@@ -14,8 +14,17 @@
     <add key="SALT" value="Add your salt key" />
     <add key="PAYU_BASE_URL" value="https://api.razorpay.com/v1" />
     <add key="action" value="" />
-    <add key="hashSequence" value="key|txnid|amount|productinfo|firstname|email|udf1|udf2|udf3|udf4|udf5|udf6|udf7|udf8|udf9|udf10" />
-
+    <add key="SMSAPI" value="http://smsw.co.in/API/WebSMS/Http/v1.0a/index.php?username=MYTRADE[AND]password=cK0UgN-zvvk[AND]sender=MYTRDE[AND]to=[MOBILE][AND]message=[MESSAGE][AND]reqid=1[AND]format={json|text}[AND]pe_id=1201164527137320733[AND]template_id=[TempId]"/>
+    <add key="ForgetPassword" value="Dear [Name], Your temporary password is [Password]. MY TRADE"/>
+    <add key="KycApprovel" value="Dear [Name], Your KYC has been [KYCSTATUS]. MY TRADE"/>
+    <add key="PayoutStatus" value="Dear [Name], Your Payout request has been [PAYOUTSTATUS]. MY TRADE"/>
+    <add key="Payout" value="Dear [Name], Your Payout has been generated of Amount [Payout] for Payout No. [PayoutNo] on Dated [PayoutDate]. MY TRADE"/>
+    <add key="Topup" value="Dear [Name], You have successfully top up with amount Rs. [Amount]. MY TRADE"/>
+    <add key="Wallet" value="Dear [Name], Your wallet has been successfully [Status]. MY TRADE"/>
+    <add key="AdminPinGeneration" value="Dear [Name], Your requested pin has been successfully approved by admin. MY TRADE"/>
+    <add key="OTP" value="Dear [Name], Your OTP [OTP] for [USEDFOR]. MY TRADE"/>
+    <add key="IdActivated" value="Dear [Name], Your Profile is activated successfully with package [Package]. Kindly check your account for more details. MY TRADE"/>
+   
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
