--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -259,19 +259,6 @@
     <Content Include="EmailTemplateRegistration.html" />
     <Content Include="Global.asax" />
     <Content Include="LevelTree.aspx" />
-    <Content Include="main-assets\css\bootstrap.min.css" />
-    <Content Include="main-assets\css\fontawesome-all.min.css" />
-    <Content Include="main-assets\css\fxt-animation.css" />
-    <Content Include="main-assets\css\style.css" />
-    <Content Include="main-assets\js\bootstrap.min.js" />
-    <Content Include="main-assets\js\imagesloaded.pkgd.min.js" />
-    <Content Include="main-assets\js\jquery-3.5.0.min.js" />
-    <Content Include="main-assets\js\jquery.countdown.min.js" />
-    <Content Include="main-assets\js\main.js" />
-    <Content Include="main-assets\media\figure\maintenance-img.png" />
-    <Content Include="main-assets\webfonts\fa-brands-400.html" />
-    <Content Include="main-assets\webfonts\fa-regular-400.html" />
-    <Content Include="main-assets\webfonts\fa-solid-900.html" />
     <Content Include="Models\WebService\AgentServices.asmx" />
     <Content Include="MyTradeWebsite\about.html" />
     <Content Include="MyTradeWebsite\assets\css\animate.min.css" />
@@ -645,7 +632,9 @@
     <Content Include="UploadReward\c0659906-862e-42b5-9528-5ae46407cba8.jpg" />
     <Content Include="UploadReward\c80a6e85-c6bd-4e04-b32d-f352cf697a28.jpeg" />
     <Content Include="UploadReward\efac9723-517d-4a1f-9561-6cca06b02dfe.jpeg" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Registration.cshtml" />
   </ItemGroup>
@@ -687,6 +676,7 @@
     <Compile Include="Models\API.cs" />
     <Compile Include="Models\AssociateBooking.cs" />
     <Compile Include="Models\BLMail.cs" />
+    <Compile Include="Models\BLSMS.cs" />
     <Compile Include="Models\Common.cs" />
     <Compile Include="Models\Crypto.cs" />
     <Compile Include="Models\DAL\AgentDAL.cs" />
@@ -772,21 +762,6 @@
     <Content Include="MyTradeWebsite\assets\fonts\Flaticon.woff" />
     <Content Include="MyTradeWebsite\assets\fonts\Flaticon.woff2" />
     <Content Include="MyTradeWebsite\assets\fonts\Flaticond41d.eot" />
-    <Content Include="main-assets\webfonts\fa-brands-400.eot" />
-    <Content Include="main-assets\webfonts\fa-brands-400.ttf" />
-    <Content Include="main-assets\webfonts\fa-brands-400.woff" />
-    <Content Include="main-assets\webfonts\fa-brands-400.woff2" />
-    <Content Include="main-assets\webfonts\fa-brands-400d41d.eot" />
-    <Content Include="main-assets\webfonts\fa-regular-400.eot" />
-    <Content Include="main-assets\webfonts\fa-regular-400.ttf" />
-    <Content Include="main-assets\webfonts\fa-regular-400.woff" />
-    <Content Include="main-assets\webfonts\fa-regular-400.woff2" />
-    <Content Include="main-assets\webfonts\fa-regular-400d41d.eot" />
-    <Content Include="main-assets\webfonts\fa-solid-900.eot" />
-    <Content Include="main-assets\webfonts\fa-solid-900.ttf" />
-    <Content Include="main-assets\webfonts\fa-solid-900.woff" />
-    <Content Include="main-assets\webfonts\fa-solid-900.woff2" />
-    <Content Include="main-assets\webfonts\fa-solid-900d41d.eot" />
     <None Include="Properties\PublishProfiles\MyTrade.pubxml" />
     <Content Include="Views\Home\CompleteRegistration.cshtml" />
     <Content Include="Views\User\ActivateByPin.cshtml" />
@@ -902,7 +877,10 @@
     <Content Include="Views\Recharge\RechargeList.cshtml" />
     <Content Include="Views\AdminReports\RechargeListForAdmin.cshtml" />
     <Content Include="Views\Recharge\DMT.cshtml" />
-    <Content Include="Views\Home\Maintenance.cshtml" />
+    <Content Include="Views\User\UserReward.cshtml" />
+    <Content Include="Views\AdminReports\ClaimRewardReport.cshtml" />
+    <Content Include="Views\Home\AutoCalculateRewardBusiness.cshtml" />
+    <Content Include="Views\User\RoyaltyClub.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -937,7 +915,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>53405</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:53407/</IISUrl>
+          <IISUrl>http://localhost:53409/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
