--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -882,6 +882,8 @@
     <Content Include="Views\Home\AutoCalculateRewardBusiness.cshtml" />
     <Content Include="Views\User\RoyaltyClub.cshtml" />
     <Content Include="Views\Home\OTPVerify.cshtml" />
+    <Content Include="Views\AdminReports\JoiningPackageReport.cshtml" />
+    <Content Include="Views\Admin\BonazaReward.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
