changes in user and admin panel

--- a/MyTrade/MyTrade.csproj
+++ b/MyTrade/MyTrade.csproj
@@ -1052,6 +1052,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="PanUpload\" />
+    <Folder Include="plugins\apex\" />
     <Folder Include="Views\API\" />
     <Folder Include="Views\WebAPI\" />
   </ItemGroup>
