--- a/MyTradeMTG/MyTradeMTG.csproj
+++ b/MyTradeMTG/MyTradeMTG.csproj
@@ -1043,6 +1043,7 @@
     <Content Include="UserPanel\vendor\lightgallery\fonts\lgd641.woff" />
     <Content Include="Views\Master\BalanceTransfer.cshtml" />
     <Content Include="Views\User\MTGPurchaseSell.cshtml" />
+    <Content Include="Views\User\WalletTransfer.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
